--- a/frontend/applications.html
+++ b/frontend/applications.html
@@ -14,15 +14,16 @@
             color: #fff;
             min-height: 100vh;
             display: flex;
-            align-items: center;
             justify-content: center;
+            padding-top: 60px;
         }
 
         .container {
             width: 95%;
             max-width: 1100px;
             background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
             border-radius: 16px;
             padding: 32px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
@@ -31,43 +32,46 @@
         h1 {
             text-align: center;
             margin-bottom: 24px;
+            font-weight: 500;
             color: #fff;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            overflow-x: auto;
         }
 
         th,
         td {
             padding: 14px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
             text-align: left;
             font-size: 14px;
             color: #eee;
         }
 
         th {
-            background-color: rgba(103, 58, 183, 0.8);
-            color: white;
+            background-color: rgba(255, 255, 255, 0.08);
+            color: #ffffff;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         tr:nth-child(even) {
-            background-color: rgba(255, 255, 255, 0.03);
+            background-color: rgba(255, 255, 255, 0.025);
         }
 
         .download-btn {
             background-color: #00c853;
             color: white;
-            padding: 6px 12px;
+            padding: 6px 14px;
             font-size: 13px;
             border: none;
             border-radius: 6px;
             text-decoration: none;
             cursor: pointer;
-            transition: background-color 0.2s;
+            transition: background-color 0.2s ease;
+            display: inline-block;
         }
 
         .download-btn:hover {
@@ -91,7 +95,6 @@
 
             td {
                 margin-bottom: 10px;
-                border: none;
                 border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             }
 
