--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,21 +16,24 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-size: cover;
+            background-attachment: fixed;
         }
 
+
         .login-box {
-            background: rgba(255, 255, 255, 0.06);
-            border: 1px solid rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
             border-radius: 16px;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
             padding: 40px 32px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-            backdrop-filter: blur(10px);
-            width: 100%;
             max-width: 400px;
-            color: #fff;
+            width: 100%;
             text-align: center;
+            color: #fff;
         }
+
 
         .login-box img {
             width: 70px;
