--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,158 +2,127 @@
 <html lang="tr">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilgi Güvenliği Giriş Paneli</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
+        * {
+            box-sizing: border-box;
             padding: 0;
+            margin: 0;
+        }
+
+        body {
             font-family: 'Rubik', sans-serif;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            background: url('https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/background-locks.jpg') no-repeat center center fixed;
+            background-size: cover;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-attachment: fixed;
         }
-
 
         .login-box {
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(16px);
             -webkit-backdrop-filter: blur(16px);
             border-radius: 16px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
-            padding: 40px 32px;
-            max-width: 400px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 40px;
             width: 100%;
+            max-width: 400px;
             text-align: center;
-            color: #fff;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         }
-
 
         .login-box img {
-            width: 70px;
-            margin-bottom: 16px;
-        }
-
-        .login-box h2 {
-            margin-bottom: 24px;
-            font-weight: 500;
-            font-size: 22px;
-        }
-
-        .form-group {
-            text-align: left;
+            width: 60px;
             margin-bottom: 20px;
         }
 
-        .form-group label {
-            font-size: 14px;
-            margin-bottom: 6px;
-            display: block;
-            color: #ccc;
+        .login-box h2 {
+            color: #fff;
+            margin-bottom: 24px;
+            font-size: 22px;
+            font-weight: 500;
         }
 
-        .form-group input {
+        .login-box input {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 16px;
+            border-radius: 6px;
+            border: none;
+            outline: none;
+            background-color: rgba(255, 255, 255, 0.15);
+            color: #fff;
+            font-size: 14px;
+        }
+
+        .login-box input::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        .login-box button {
             width: 100%;
             padding: 12px;
             border: none;
             border-radius: 6px;
-            font-size: 14px;
-            background: rgba(255, 255, 255, 0.1);
-            color: #fff;
-            outline: none;
-        }
-
-        .form-group input::placeholder {
-            color: #bbb;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 14px;
             background-color: #00c853;
-            color: white;
-            font-size: 15px;
-            border: none;
-            border-radius: 6px;
+            color: #fff;
+            font-size: 16px;
+            font-weight: 500;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s ease;
         }
 
-        .btn:hover {
+        .login-box button:hover {
             background-color: #00b248;
         }
 
-        .error-msg {
-            color: #ff8a80;
-            font-size: 13px;
-            margin-top: 12px;
-        }
-
-        .footer-note {
-            margin-top: 20px;
+        .login-box .note {
+            margin-top: 14px;
             font-size: 12px;
-            color: #bbb;
-        }
-
-        @media (max-width: 500px) {
-            .login-box {
-                margin: 0 16px;
-            }
+            color: rgba(255, 255, 255, 0.7);
         }
     </style>
 </head>
 
 <body>
-
     <div class="login-box">
-        <img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png" alt="Security Logo" />
+        <img src="https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/whoamus-logo.png" alt="WHOAMUS Logo" />
+
         <h2>Bilgi Güvenliği Giriş Paneli</h2>
         <form id="login-form">
-            <div class="form-group">
-                <label for="email">E-posta</label>
-                <input type="email" id="email" placeholder="admin@phishing.com" required />
-            </div>
-            <div class="form-group">
-                <label for="password">Şifre</label>
-                <input type="password" id="password" placeholder="********" required />
-            </div>
-            <button class="btn" type="submit">Giriş Yap</button>
-            <div class="error-msg" id="error-msg"></div>
+            <input type="email" id="email" placeholder="Eposta" required>
+            <input type="password" id="password" placeholder="Şifre" required>
+            <button type="submit">Giriş Yap</button>
         </form>
-        <div class="footer-note">Sadece yetkili personel giriş yapabilir.</div>
+        <div class="note">Sadece yetkili personel giriş yapabilir.</div>
     </div>
 
     <script>
-        document.getElementById("login-form").addEventListener("submit", async function (e) {
+        document.getElementById('login-form').addEventListener('submit', async function (e) {
             e.preventDefault();
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
 
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-            const errorBox = document.getElementById("error-msg");
-
-            const res = await fetch("https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/login", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
+            const response = await fetch('/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ email, password })
             });
 
-            if (res.ok) {
-                const data = await res.json();
-                localStorage.setItem("token", data.token);
+            const result = await response.json();
+            if (response.ok) {
+                localStorage.setItem("token", result.token);
                 window.location.href = "/applications.html";
             } else {
-                const err = await res.json();
-                errorBox.innerText = err.message || "Giriş başarısız.";
+                alert("Hatalı giriş bilgileri");
             }
         });
     </script>
-
 </body>
 
 </html>
