Page design done.

--- a/frontend/applications.html
+++ b/frontend/applications.html
@@ -82,13 +82,19 @@
             font-size: 13px;
             display: inline-block;
         }
+
+        .logo {
+            width: 150px;
+            margin-bottom: 24px;
+            filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <img class="logo" src="https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/whoamus-logo.png"
-            alt="WHOAMUS Logo">
+            alt="WHOAMUS Logo" class="logo">
         <h1>Başvuru Listesi</h1>
         <table id="applications-table">
             <thead>
