--- a/frontend/login.html
+++ b/frontend/login.html
@@ -88,13 +88,19 @@
             font-size: 12px;
             color: rgba(255, 255, 255, 0.7);
         }
+
+        .logo {
+            width: 150px;
+            margin-bottom: 24px;
+            filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+        }
     </style>
 </head>
 
 <body>
     <div class="login-box">
-        <img src="https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/whoamus-logo.png" alt="WHOAMUS Logo"
-            crossorigin="anonymous" />
+        <img src="https://docsgoogle-forms-fsdawqdsad-production.up.railway.app/whoamus-logo.png" class="logo"
+            alt="WHOAMUS Logo" crossorigin="anonymous" />
         <h2>Bilgi Güvenliği Giriş Paneli</h2>
         <form id="login-form">
             <input type="email" id="email" placeholder="Eposta" required />
