--- a/frontend/applications.html
+++ b/frontend/applications.html
@@ -87,6 +87,7 @@
             width: 150px;
             margin-bottom: 24px;
             filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+            margin-bottom: 8px;
         }
     </style>
 </head>
