--- a/frontend/index.html
+++ b/frontend/index.html
@@ -211,7 +211,7 @@
 <body>
     <div class="container">
         <div class="card header-card">
-            <h1>Bölüm Staj Başvurusu</h1>
+            <h1>Yazılım Kariyer Merkezi Staj Başvurusu</h1>
             <hr class="title-divider" />
             <p style="font-size:14px; color:#5F6368; margin-top:12px;">
                 Bu formu gönderdiğinizde bilgileriniz kaydedilecektir.
