--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yazılım Kariyer Merkezi</title>
+    <title>VeriNova Teknoloji</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <style>
@@ -211,7 +211,7 @@
 <body>
     <div class="container">
         <div class="card header-card">
-            <h1>Yazılım Kariyer Merkezi Staj Başvurusu</h1>
+            <h1>VeriNova Teknoloji Staj Başvurusu</h1>
             <hr class="title-divider" />
             <p style="font-size:14px; color:#5F6368; margin-top:12px;">
                 Bu formu gönderdiğinizde bilgileriniz kaydedilecektir.
