--- a/frontend/index.html
+++ b/frontend/index.html
@@ -205,6 +205,24 @@
             font-size: 20px;
             font-weight: 500;
         }
+
+        .form-group input[type="text"],
+        .form-group input[type="tel"] {
+            width: 100%;
+            border: none;
+            border-bottom: 1px solid #DADCE0;
+            background: transparent;
+            padding: 8px 0;
+            font-size: 14px;
+            box-sizing: border-box;
+        }
+
+        .form-group input[type="text"]:focus,
+        .form-group input[type="tel"]:focus {
+            outline: none;
+            border-bottom: 2px solid #4285F4;
+            background-color: transparent;
+        }
     </style>
 </head>
 
